# store_with_django

./:  products_data.json  .env  .env.sample  .gitignore  README.md  categories_data.json  category.json  data.json  manage.py  product.json  pyproject.toml  requirements.txt  weblog_data.json
blog/: admin.py  forms.py  models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py  fill_catalog.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0002_initial.py  0002_version.py  0003_product_user_version_product.py  0003_version.py  0004_alter_version_is_active.py  0005_product_user.py
catalog/templates/catalog/: all_products.html  contacts.html  create_product_error.html  create_version_error.html  home.html  info_about_product.html  prod_form.html  product_form.html  product_info.html
catalog/templatetags/: catalog_tags.py
config/: asgi.py  settings.py  urls.py  wsgi.py
materials/: models.py
materials/migrations/: 0001_initial.py
materials/templates/materials/: material_confirm_delete.html  material_form.html
users/: services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_user_is_verified_user_verification_token.py  0004_alter_user_verification_token.py
users/templates/users/: error_verification.html  password_recovery.html  (+6 more)
weblog/migrations/: 0001_initial.py
(+3 files in other folders)
