[tool.poetry]
name = "exercise-16"
version = "0.1.0"
description = ""
authors = ["sergei valdemarov <valdemarovsergei@gmail.com>"]
readme = "README.md"
packages = [{include = "exercise_16"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
